[landing] [fix] button header on mobile breaking layout
Summary: fix header so button in header doesn't show on mobile

Test Plan: shrink viewport to show break point is working as expected and layout isn't broken

Reviewers: atul

Subscribers:

--- a/landing/header.css
+++ b/landing/header.css
@@ -77,9 +77,10 @@ div.button_container {
   }
 
   .request_access,
-  .button_container,
+  div.button_container,
   button.request_access {
     display: none;
+    background: red;
   }
 
   .github_icon,
